# estimium

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
docs/source/: conf.py  index.rst
docs/source/references/: index.rst
estimium/: __init__.py  base.py
tests/: test_base.py  test_estimium.py
