[tool.poetry]
name = "estimium"
version = "0.1.0"
description = "A collection of ML tools written with professor's chalk"
authors = ["Mateusz Zakrzewski <mrtovsky@protonmail.com>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
