[tool.poetry]
name = "estimium"
version = "0.1.1"
description = "A collection of ML tools written with professor's chalk"
authors = ["Mateusz Zakrzewski <mrtovsky@protonmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Flake8",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
black = "^19.10b0"
flake8 = "^3.7.9"
flake8-bugbear = "^20.1.4"
pre-commit = "^2.2.0"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
